# splat

./: Makefile.am  config.h.in  configure.ac
src/: Makefile.am  main.c
